--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "coffee": "^5.2.1",
-    "elm": "^0.19.0-bugfix6",
+    "elm": "^0.19.1-3",
     "elm-test": "^0.19.0-rev6",
     "jest": "^24.8.0",
     "prettier": "1.17.0"
