Commented mocked code, tests failing

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "license": "BSD-3-Clause",
   "scripts": {
     "elm-evancz": "elm make specs/assets/elm/Main.elm --optimize --output=tmp/specs-elm-evancz.js",
-    "preelm-ce": "elm make src/Main.elm --optimize --output=tmp/elm-ce.js",
+    "preelm-ce": "elm make src/Main.elm --debug --output=tmp/elm-ce.js",
     "elm-ce": "./lib/tasks/elm-ce-make.js specs/assets/elm/Main.elm --output=tmp/specs-elm-ce.js",
     "elm-test": "elm-test src/**/*.elm",
     "prespec": "yarn elm-evancz && yarn elm-ce",
