--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "license": "BSD-3-Clause",
   "scripts": {
-    "elm-evancz": "cd specs/assets && elm make src/Main.elm --optimize --output=../../tmp/specs-elm-evancz.js && cd ../..",
+    "elm-evancz": "cd specs/assets && elm make src/Main.elm --debug --output=../../tmp/specs-elm-evancz.js && cd ../..",
     "preelm-ce": "elm make src/Main.elm --debug --output=tmp/elm-ce.js",
     "elm-ce": "cd specs/assets && ../../lib/tasks/elm-ce-make.js src/Main.elm --output=../../tmp/specs-elm-ce.js && cd ../..",
     "elm-test": "elm-test src/**/*.elm",
